--- a/user/css/style.css
+++ b/user/css/style.css
@@ -1148,3 +1148,6 @@ table tr td:first-child, table tr th:first-child {
     padding: 8px;
     line-height: 1.42857143;
 }
+.btnOrder{
+	font-size: 20px;
+}
